Add Pangolin to project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,43 +1,42 @@
 cmake_minimum_required(VERSION 3.16)
 project(xfeat_slam)
 
-# Set the path to ONNX Runtime, OpenCV, and libtorch
+# Set paths for third-party libraries
 set(ONNXRUNTIME_ROOT "${CMAKE_SOURCE_DIR}/third-party/onnxruntime")
-set(OPENCV_ROOT "${CMAKE_SOURCE_DIR}/third-party/opencv")
 set(LIBTORCH_ROOT "${CMAKE_SOURCE_DIR}/third-party/libtorch")
-
-# Ensure ONNX Runtime paths are found
-if(NOT EXISTS "${ONNXRUNTIME_ROOT}/include" OR NOT EXISTS "${ONNXRUNTIME_ROOT}/lib")
-    message(FATAL_ERROR "ONNX Runtime library not found in ${ONNXRUNTIME_ROOT}. Please check the path.")
-endif()
-
-# Ensure OpenCV paths are found
-if(NOT EXISTS "${OPENCV_ROOT}/include" OR NOT EXISTS "${OPENCV_ROOT}/lib")
-    message(FATAL_ERROR "OpenCV library not found in ${OPENCV_ROOT}. Please check the path.")
-endif()
-
-# Ensure libtorch paths are found
-if(NOT EXISTS "${LIBTORCH_ROOT}/include" OR NOT EXISTS "${LIBTORCH_ROOT}/lib")
-    message(FATAL_ERROR "libtorch library not found in ${LIBTORCH_ROOT}. Please check the path.")
-endif()
-
-# Set CMAKE_PREFIX_PATH to point to libtorch
-set(CMAKE_PREFIX_PATH "${LIBTORCH_ROOT}")
 
 # Option to use ONNX or Torch
 option(USE_ONNX "Enable ONNX inference" ON)
 
-# Set compiler definitions based on selected inference type
-if(USE_ONNX)
-    add_definitions(-DUSE_ONNX)
-endif()
-
 # Option to use CUDA
 option(USE_CUDA "Enable CUDA support" ON)
 
-# Check for CUDA if USE_CUDA is enabled
+# Set CMAKE_PREFIX_PATH to point to libtorch
+set(CMAKE_PREFIX_PATH "${LIBTORCH_ROOT}")
+
+# Include ONNX Runtime
+if(NOT EXISTS "${ONNXRUNTIME_ROOT}/include" OR NOT EXISTS "${ONNXRUNTIME_ROOT}/lib")
+    message(FATAL_ERROR "ONNX Runtime library not found in ${ONNXRUNTIME_ROOT}. Please check the path.")
+endif()
+
+# Include OpenCV
+find_package(OpenCV REQUIRED)
+if(NOT OpenCV_FOUND)
+    message(FATAL_ERROR "OpenCV not found. Install OpenCV 4.5 or later.")
+endif()
+
+# Include libtorch (PyTorch C++ API)
+find_package(Torch REQUIRED)
+
+# Include Pangolin
+find_package(Pangolin REQUIRED)
+if(NOT Pangolin_FOUND)
+    message(FATAL_ERROR "Pangolin not found. Install it using your system's package manager or from source.")
+endif()
+
+# Check for CUDA if enabled
 if(USE_CUDA)
-    find_package(CUDA)
+    find_package(CUDA REQUIRED)
     if(CUDA_FOUND)
         message(STATUS "CUDA found, enabling CUDA support.")
         add_definitions(-DUSE_CUDA)
@@ -46,11 +45,6 @@ if(USE_CUDA)
         set(USE_CUDA OFF)
     endif()
 endif()
-
-# Include directories
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/inc)
-include_directories(${OPENCV_ROOT}/include)
-include_directories(${LIBTORCH_ROOT}/include)
 
 # Add executable
 add_executable(xfeat_slam 
@@ -63,25 +57,24 @@ add_executable(xfeat_slam
     src/visualize.cc
 )
 
+# Include directories
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/inc)
+
 # Include ONNX Runtime
 target_include_directories(xfeat_slam PRIVATE ${ONNXRUNTIME_ROOT}/include)
-
-# Include OpenCV
-target_include_directories(xfeat_slam PRIVATE ${OPENCV_ROOT}/include/opencv4)
-
-# Include libtorch (PyTorch C++ API)
-find_package(Torch REQUIRED)
-
-# Link ONNX Runtime
 target_link_directories(xfeat_slam PRIVATE ${ONNXRUNTIME_ROOT}/lib)
 target_link_libraries(xfeat_slam onnxruntime)
 
-# Link OpenCV 
-target_link_directories(xfeat_slam PRIVATE ${OPENCV_ROOT}/lib)
-target_link_libraries(xfeat_slam opencv_core opencv_imgproc opencv_highgui opencv_imgcodecs)
+# Include OpenCV
+target_include_directories(xfeat_slam PRIVATE ${OpenCV_INCLUDE_DIRS})
+target_link_libraries(xfeat_slam ${OpenCV_LIBS})
 
-# Link libtorch
+# Include libtorch
 target_link_libraries(xfeat_slam "${TORCH_LIBRARIES}")
+
+# Include Pangolin
+target_include_directories(xfeat_slam PRIVATE ${Pangolin_INCLUDE_DIRS})
+target_link_libraries(xfeat_slam ${Pangolin_LIBRARIES})
 
 # Link CUDA libraries if enabled
 if(USE_CUDA)
@@ -93,8 +86,3 @@ endif()
 
 # Set C++ standard
 set_target_properties(xfeat_slam PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED YES)
-
-# Ensure the project uses the correct flags
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
-
-
