--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,6 +76,8 @@
         "valarray": "cpp",
         "variant": "cpp",
         "any": "cpp",
-        "ranges": "cpp"
+        "ranges": "cpp",
+        "core": "cpp",
+        "specialfunctions": "cpp"
     }
 }
